# et-platform

./: CMakeLists.txt  ETSOC1-METRICS-DISCUSSION.md  ETSOC1-METRICS-GLOSSARY.md  README.md
device-management-application/: CMakeLists.txt
device-management-application/include/: et-metrics.hpp
device-management-application/src/: et-metrics.cc
dnn-library/: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  conanfile.py  dnnLibraryConfig.cmake.in  dnn_libConfig.cmake.in
dnn-library-api/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  NOTICE  conanfile.py  dnnLibraryApiConfig.cmake.in  sonar-project.properties
dnn-library-api/ci/jenkins/: dnn-lib-api-checkin-top-level.groovy
dnn-library-api/ci/src/: dnn-lib-api-checkin-top-level.yaml
dnn-library-api/conan/: ci_build.py
dnn-library-api/include/dnnLibraryApi/: LibApi.h  LibApiImplSel.h  LibApiMembers.def  LibTensor.h  LibTypes.h  LibUtils.h
dnn-library-api/src/: Api.cpp  ApiImplSel.cpp  InstrTableGenerated.h  LibApiImplSel.h  LibApiMembers.def  LibTensor.h  Tensor.cpp
dnn-library-api/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
dnn-library/ci/jenkins/: dnn-lib-checkin-top-level.groovy
dnn-library/ci/src/: dnn-lib-checkin-top-level.yaml
dnn-library/conan/: ci_build.py  ci_promote.py
dnn-library/include/: Addresser.h  AutoGenInstan.def  AutoGenInstan.def.orig  Converter.h  Float16.h  GPSDKCommonCode.h  GenInstances.h  LibApi.h  LibApiImplSel.h  LibApiMembers.def  LibCommon.h  LibNodes.h  LibTensor.h  LibTensorIterator.h  LibTypes.h  LibUtils.h  Operator.h  Operators.h  Writer.h  cacheops.h  csr.h  esr.h  evl_dv_environment.h  fcc.h  macros.h  minion.h  msg.h  print.h  profiling.h  tensors.h  utils.h
dnn-library/include/host_headers/: InstrTableGenerated.h
dnn-library/include/inlining/: AdaptiveAvgPoolInst.h  ArgMaxInst.h  AvgPoolInst.h  BatchOneHotInst.h  BatchedAddInst.h  BatchedReduceAddInst.h  BatchedReduceMinInst.h  ChannelWiseQuantizedConvolutionInst.h  Checksum.h  ChecksumInst.h  ConvTransposeInst.h  ConvertToInst.h  Convolution3DInst.h  ConvolutionInst.h  CopyInst.h  CopyInstTensorized.h  CrossEntropyLossInst.h  CumSumInst.h  DenoiseMasks.h  Dequantize4BitsColumnBlocksInst.h  Dequantize8BitsColumnBlocksInst.h  DequantizeInst.h  ETSOCGenericOpInst.h  ETSOCMaxSplatInst.h  ElementBinaryInst.h  ElementBoolInst.h  ElementExpInst.h  ElementImmLogic.h  ElementInst.h  ElementIsNaNInst.h  ElementSelectInst.h  ElementSingleInst.h  EmbeddingBagByteRowwiseOffsetsInst.h  EmbeddingBagInst.h  ExtractTensorInst.h  FlipInst.h  Fully-macro-defs.S  FullyConnectedInst.h  FusedRowwiseQuantizedSparseLengthsSum.h  FusedRowwiseQuantizedSparseLengthsSumInst.h  (+50 more)
dnn-library/include/internal/: 0_filterMask.h  1_filterMask.h  2_filterMask.h  3_filterMask.h  4_filterMask.h  5_filterMask.h  6_filterMask.h  7_filterMask.h  8_filterMask.h  9_filterMask.h  Addresser.h  Addresser2.h  Compiler.h  Converter.h  DenoiseMasks.h  FFT.h  FFT2.h  FFTTables.h  LoadStore.h  LoadStore2.h  Operator.h  Operator2.h  Writer.h  Writer2.h  utils.h  utils2.h
dnn-library/include/internal/libc_stub/: assert.h  stdlib.h  string.h
dnn-library/include/private/: Operator.h  PackedBufferProxy.h  printf.h  utils.h
dnn-library/scripts/: cacheState.xlsx  jiraLibHelper.py  libManager.py  libManager.xlsx  sortCacheState.py
dnn-library/scripts/jiras/: epic4081.py  epic4081_part1.py  epic4081_part2.py
dnn-library/src/: AdaptiveAvgPoolInst.cpp  ArgMaxInst.cpp  AvgPoolInst.cpp  BatchOneHotInst.cpp  BatchedAddInst.cpp  BatchedReduceAddInst.cpp  BatchedReduceMinInst.cpp  ChannelWiseQuantizedConvolutionInst.cpp  Checksum.cpp  ChecksumInst.cpp  ConvTransposeInst.cpp  ConvertToInst.cpp  Convolution3DInst.cpp  ConvolutionInst.cpp  CopyInst.cpp  CopyInstTensorized.cpp  CrossEntropyLossInst.cpp  CumSumInst.cpp  DequantizeInst.cpp  DummyLogCode.cpp  ETSOCFullyConnectedInst.cpp  ETSOCMaxSplatInst.cpp  ElementAddInst.cpp  ElementBoolInst.cpp  ElementCmpEQInst.cpp  ElementCmpLTEInst.cpp  ElementCmpLTInst.cpp  ElementDivInst.cpp  ElementErfInst.cpp  ElementExpInst.cpp  ElementImmLogic.cpp  ElementInst.cpp  ElementIsNaNInst.cpp  ElementLogInst.cpp  ElementMaxInst.cpp  ElementMinInst.cpp  ElementMulInst.cpp  ElementPowInst.cpp  ElementSelectInst.cpp  ElementSingleInst.cpp  (+61 more)
dnn-library/src/libc_stub/: stdlib.c  string.c
dnn-library/test_package/: CMakeLists.txt  conanfile.py  test_package_device.cpp
esperanto-tools-libs/tools/: CMakeLists.txt
esperanto-tools-libs/tools/src/: README.md  et_profile_convert.cpp
gp-sdk/device/: CMakeLists.txt  README.md  README.txt  ToolchainGpsdk-gcc-riscv.cmake.in  conanfile.txt  conanfile_latest.txt  conanfile_v0.12.1.txt  conanfile_v0.12.3.txt  conanfile_v0.14.2.txt  install.sh  riscv_helpers.cmake
gp-sdk/device/examples/: CMakeLists.txt
gp-sdk/device/examples/hello_world/: hello_world.cc
gp-sdk/device/sdk/: CMakeLists.txt
gp-sdk/device/sdk/include/: CommonCode.h  SyncComputeNode.h  UberKernelCommon.h  common_arguments.h  crtCommon.h  entryPoint.h  environment.h  flbLock.h  inst_pref_decls.h  kernel_arguments.h  profiling.h  sync.h  usermain.h
gp-sdk/device/sdk/lib/: SyncComputeNode.cc  crt0.S  deviceGpSdk.cc  genmain_gpsdk.cc  linker.ld  linker.relink.ld  uberKernel_crt.S
gp-sdk/device/sdk/libautogen/: CMakeLists.txt
gp-sdk/device/sdk/libc_stub/: et_atexit.cc  et_errno.cc
gp-sdk/device/sdk/libcpp_throw_stub/: functexcept.cc
gp-sdk/device/sdk/libetgcc/: divsf.c
gp-sdk/device/sdk/libetm/: .clang-format  e_acos.c  e_acosh.c  e_asin.c  e_atanh.c  e_log.c  e_pow.c  ef_acos.c  ef_acosh.c  ef_asin.c  ef_atanh.c  ef_log.c  ef_pow.c  ef_sqrtf.c  etmath_private.h  s_log1p.c  sf_log1p.c  w_acos.c  w_acosh.c  w_asin.c  w_log.c  w_pow.c  wf_acos.c  wf_acosh.c  wf_asin.c  wf_log.c  wf_pow.c
gp-sdk/device/tests/: CMakeLists.txt  tests.cmake
gp-sdk/device/tests/cacheops/: flush.cc
gp-sdk/host/: CMakeLists.txt  build.sh  conanfile.py
gp-sdk/host/examples/: CMakeLists.txt
gp-sdk/host/sdk/: CMakeLists.txt
gp-sdk/host/tests/: CMakeLists.txt
(+188 files in other folders)
